--- a/creative2.html
+++ b/creative2.html
@@ -1,10 +1,21 @@
 <html>
-<head>
-<title>
-</title>
-</head>
-<body>
-<p> hello world</p>
-</body>
+	<head>
+		<title>Phone Number Verification</title>
+		<link rel="stylesheet" type="text/css" href="jq.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="container2">
+				<p id='enternumberpar'>something about a phone number!</p>
+				<p id='enterphone'>Enter Phone Number Here:</p>
+				<div class="phonenumberbox">
+					<input id='numberbox' type="text" name="verifier">
+				</div>
+				<div class="centerbutton">
+					<input type="button" value="Verify" class='buttonformat' onclick="checkNumber()" />
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
 
