--- a/creative2.html
+++ b/creative2.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Phone Number Verification</title>
-		<link rel="stylesheet" type="text/css" href="jq.css">
+		<link rel="stylesheet" type="text/css" href="creative2.css">
 		<script
 		src="http://code.jquery.com/jquery-3.2.1.min.js"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
