--- a/creative2.html
+++ b/creative2.html
@@ -80,12 +80,12 @@
 				<div id="searchResults">
 						Results
 				</div>
+				<div class="giphButtonDiv"
+					<input id="giphButton" type = "submit" value="Get Giph">
+					<img id = "giphResult">
+				</div>
 			</div>
 		</div>
-	<form>
-		<input id="giphButton" type = "submit" value="Get Giph">
-		<img id = "giphResult">
-	</form>
 
 	</body>
 </html>
