--- a/creative2.html
+++ b/creative2.html
@@ -81,7 +81,7 @@
 						Results
 				</div>
 				
-					<input id="giphButton" type = "submit" value="Get Giph">
+					<input id="giphButton" type = "submit" value="Get Giph" class='buttonformat' >
 					<img id = "giphResult">
 				
 			</div>
