--- a/creative2.html
+++ b/creative2.html
@@ -37,32 +37,51 @@
 		if (json.valid) {
 			$("#searchResults").html("This number is valid!")
 			console.log("it worked");
+		//gets the gif for success	
+		 e.preventDefault();
+        	 var myurl= "http://api.giphy.com/v1/gifs/search?q=celebration&api_key=epc9UvOUM3cdzaoent78NNtXpvWTsbqv&limit=30";
+        	 console.log(myurl);
+        	 $.ajax({
+        	 url : myurl,
+        	 crossDomain: true,
+        	 dataType : "json",
+        	 success : function(result) {
+        	 console.log(result);
+       		 var randNumber = Math.floor(Math.random() * 29) + 0;
+       		 console.log(randNumber);
+       		 var total = result['data'][randNumber]['images']['original'].url;
+       	 	 console.log("success", total);
+        	$("#giphResult").attr('src', total);
+    	}
+	  });
+
+
 		}
 		else {
 			console.log("didn't work");
 			$("#searchResults").html("This number is not valid!")
+		//get and display fail giph
+        		 e.preventDefault();
+        		 var myurl= "http://api.giphy.com/v1/gifs/search?q=fail&api_key=epc9UvOUM3cdzaoent78NNtXpvWTsbqv&limit=30";
+        		 console.log(myurl);
+        		 $.ajax({
+        		 url : myurl,
+        		 crossDomain: true,
+        		 dataType : "json",
+        		 success : function(result) {
+        		 console.log(result);
+        		 var randNumber = Math.floor(Math.random() * 29) + 0;
+       			 console.log(randNumber);
+       			 var total = result['data'][randNumber]['images']['original'].url;
+        		 console.log("success", total);
+       			 $("#giphResult").attr('src', total);
+    }
+  });
+
 		}
 		}	
 		});
 		});
-	$("#giphButton").click(function(e){
- 	 e.preventDefault();
- 	 var myurl= "http://api.giphy.com/v1/gifs/search?q=celebration&api_key=epc9UvOUM3cdzaoent78NNtXpvWTsbqv&limit=30";
-	 console.log(myurl);
- 	 $.ajax({
-   	 url : myurl,
-   	 crossDomain: true,
-   	 dataType : "json",
-   	 success : function(result) {
-     	 console.log(result);
-        var randNumber = Math.floor(Math.random() * 29) + 0;
-        console.log(randNumber);
-        var total = result['data'][randNumber]['images']['original'].url;
-         console.log("success", total);
-        $("#giphResult").attr('src', total);
-    }
-  });
-  });  
 }); //end of document.ready
 
 	</script>
@@ -81,7 +100,6 @@
 						Results
 				</div>
 				
-					<input id="giphButton" type = "submit" value="Get Giph" class='buttonformat' >
 					<img id = "giphResult">
 				
 			</div>
